Fix for BUG#29318 "Statements prepared with PREPARE and with one parameter don't use query cache" Thanks to the fix of BUG#26842, statements prepared with SQL PREPARE and having parameters can now use the query cache.